--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "faridatulna.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://faridatulna.github.io/faridatulna.github.io",
+  "homepage":"https://faridatulna.github.io/faridatulna.github.io",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
